[tool.poetry]
name = "finalproject-lukashov-dpo-nod"
version = "0.1.0"
description = ""
authors = ["Kirill Lukashov <K.A.Lukashov@mail.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]
 

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "main:main"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
