[tool.poetry]
name = "finalproject-lukashov-dpo-nod"
version = "0.1.0"
description = ""
authors = ["Kirill Lukashov <K.A.Lukashov@mail.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]
 

[tool.poetry.dependencies]
python = "^3.12"
prettytable = "^3.17.0"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
project = "main:main"


[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__", ".git"]


[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []


[tool.valutatrade]
data_dir = "data"
rates_ttl_seconds = 300
default_base_currency = "USD"
log_dir = "logs"
log_level = "INFO"
log_format = "%(asctime)s | %(levelname)s | %(name)s | %(message)s"
